@@ -5,6 +5,7 @@
 # BUG   = fixed a bug that was crashing
 
 Mar 18, 2001
+	friendlier type casting in surfarray (for some compilers)
 	removed non-ANSI C code
 
 Mar 17, 2001
